--- a/react-complete-guide/src/index.css
+++ b/react-complete-guide/src/index.css
@@ -4,7 +4,7 @@
   line-height: 24px;
   font-weight: 400;
   /* color-scheme: light dark; */
-  color: rgba(255, 255, 255, 0.87);
+  /* color: rgba(255, 255, 255, 0.87); */
   background-color: #3f3f3f;
 
   font-synthesis: none;
