--- a/08-practice-project/src/Components/Users/AddUser.module.css
+++ b/08-practice-project/src/Components/Users/AddUser.module.css
@@ -1,7 +1,6 @@
 .input {
-  width: 100%;
-
-  /* margin: 0.5rem auto; */
+  width: 90%;
+  margin: 2rem auto;
   padding: 1rem;
   max-width: 40rem;
 }
